--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ email: oskar.wickstrom@gmail.com
 description: >
   Sharing thoughts, reflections and lessons learned.
 baseurl: ""
-url: "https://owickstrom.github.io"
+url: "https://wickstrom.tech"
 twitter_username: owickstrom
 github_username:  owickstrom
 
