--- a/_config.yml
+++ b/_config.yml
@@ -5,14 +5,20 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: "Oskar Wickström's Programming Blog"
+title: "Func Da World"
 email: oskar.wickstrom@gmail.com
 description: >
-  Thoughts, reflections and lessons learned in programming.
+  Oskar Wickström on functional programming.
 baseurl: ""
 url: "https://wickstrom.tech"
 twitter_username: owickstrom
 github_username:  owickstrom
+
+navigation:
+  - text: Archive
+    url: /archive.html
+  - text: About
+    url: /about.html
 
 # Build settings
 markdown: Pandoc
