Change base url

--- a/src/_config.yml
+++ b/src/_config.yml
@@ -10,7 +10,7 @@ email: oskar.wickstrom@gmail.com
 description: >
   Oskar Wickström on functional programming.
 baseurl: ""
-url: "https://owickstrom.github.io"
+url: "https://owickstrom.github.io/blog-test/"
 twitter_username: owickstrom
 github_username:  owickstrom
 
