Change base url

--- a/src/_config.yml
+++ b/src/_config.yml
@@ -9,7 +9,7 @@ title: "Func Da World"
 email: oskar.wickstrom@gmail.com
 description: >
   Oskar Wickström on functional programming.
-baseurl: "/blog-test"
+baseurl: "/func-da-world"
 url: "https://owickstrom.github.io"
 twitter_username: owickstrom
 github_username:  owickstrom
