Change base url

--- a/src/_config.yml
+++ b/src/_config.yml
@@ -11,7 +11,7 @@ description: >
   Where Oskar Wickström writes about functional programming, open source
   software, and other delightful things.
 baseurl: ""
-url: "https://owickstrom.github.io"
+url: "https://wickstrom.tech"
 twitter_username: owickstrom
 github_username:  owickstrom
 
