Add stylish home page

--- a/src/_config.yml
+++ b/src/_config.yml
@@ -16,6 +16,8 @@ twitter_username: owickstrom
 github_username:  owickstrom
 
 navigation:
+  - text: Archive
+    url: /archive.html
   - text: About
     url: /about.html
 
