Add section on generating diagrams

--- a/src/_posts/pandoc-beamer-examples/Makefile
+++ b/src/_posts/pandoc-beamer-examples/Makefile
@@ -1,7 +1,10 @@
 FIRST_PDF=../../generated/pandoc-beamer-examples/first.pdf
 
+DIAGRAM_SRCS=$(shell find diagrams -name '*.dot')
+DIAGRAMS=$(DIAGRAM_SRCS:diagrams/%.dot=../../generated/pandoc-beamer-examples/%.png)
+
 .PHONY: all
-all: $(FIRST_PDF)
+all: $(FIRST_PDF) $(DIAGRAMS)
 
 $(FIRST_PDF): first.md
 	rm -rf .tmp
@@ -10,3 +13,6 @@ $(FIRST_PDF): first.md
 	cd .tmp && pdflatex slides.tex
 	cp .tmp/slides.pdf $(FIRST_PDF)
 	rm -rf .tmp
+
+../../generated/pandoc-beamer-examples/%.png: diagrams/%.dot
+	dot -Tpng $< -o $@
