--- a/func-da-world.cabal
+++ b/func-da-world.cabal
@@ -13,7 +13,7 @@ build-type:          Simple
 cabal-version:       >=1.10
 
 library
-  hs-source-dirs:      src/_lhs
+  hs-source-dirs:      src/_posts
   build-depends:       base >= 4.7 && < 5
                      , mtl
                      , io-memoize
