New design and no google fonts

--- a/func-da-world.cabal
+++ b/func-da-world.cabal
@@ -1,4 +1,4 @@
-name:                func-da-world
+name:                wickstrom-tech
 version:             0.1.0.0
 -- synopsis:
 -- description:
