--- a/src/_config.yml
+++ b/src/_config.yml
@@ -5,11 +5,9 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: "Func Da World"
+title: "Oskar Wickström"
 email: oskar.wickstrom@gmail.com
-description: >
-  Where Oskar Wickström writes about functional programming, open source
-  software, and other delightful things.
+description: "Software design, testing, functional programming, and other delightful things."
 baseurl: ""
 url: "https://wickstrom.tech"
 twitter_username: owickstrom
