--- a/src/Gemfile
+++ b/src/Gemfile
@@ -1,6 +1,10 @@
 source 'https://rubygems.org'
 
+gem 'jekyll', '3.3'
+gem 'guard'
+gem 'guard-livereload'
+
 group :jekyll_plugins do
-  gem 'jekyll-sitemap'
+  gem 'jekyll-sitemap', '>=0.12.0'
   gem 'jekyll-pandoc'
 end
