Missing properties section

--- a/src/_config.yml
+++ b/src/_config.yml
@@ -37,8 +37,9 @@ gems:
 
 pandoc:
   extensions:
-    highlight-style: pygments
-    filter: pandoc-include-code
+    - mathml
+    - highlight-style: pygments
+    - filter: pandoc-include-code
 
 plantuml:
   plantuml_jar: ../deps/plantuml.jar     # path to plantuml jar
