--- a/func-da-world.cabal
+++ b/func-da-world.cabal
@@ -20,6 +20,15 @@ library
                      , text
   default-language:    Haskell2010
 
+executable diagrams-square
+  hs-source-dirs: src/_diagrams
+  main-is: Square.hs
+  build-depends:       base >= 4.7 && < 5
+                     , diagrams-lib
+                     , diagrams-cairo
+                     , diagrams-svg
+  default-language:    Haskell2010
+
 source-repository head
   type:     git
   location: https://github.com/owickstrom/func-da-world
