--- a/func-da-world.cabal
+++ b/func-da-world.cabal
@@ -13,20 +13,15 @@ build-type:          Simple
 cabal-version:       >=1.10
 
 library
-  hs-source-dirs:      src/_posts
-  build-depends:       base >= 4.7 && < 5
-                     , mtl
-                     , io-memoize
-                     , text
-  default-language:    Haskell2010
-
-executable timeline-diagrams
-  hs-source-dirs:      src/_diagrams
-  main-is:             TimelineDiagrams.hs
+  hs-source-dirs:      src/_posts, src/_diagrams
+  exposed-modules:     TimelineDiagrams
   build-depends:       base >= 4.7 && < 5
                      , diagrams-lib
                      , diagrams-cairo
                      , diagrams-svg
+                     , mtl
+                     , io-memoize
+                     , text
   default-language:    Haskell2010
 
 source-repository head
