--- a/wickstrom-tech.cabal
+++ b/wickstrom-tech.cabal
@@ -26,6 +26,15 @@ library
                      , text
   default-language:    Haskell2010
 
+executable unicode-numbers
+  hs-source-dirs:      src/_tools
+  main-is:             UnicodeNumbers.hs
+  build-depends:       base >= 4.7 && < 5,
+                       pcre-heavy,
+                       pandoc-types < 1.20,
+                       text
+  default-language:    Haskell2010
+
 source-repository head
   type:     git
   location: https://github.com/owickstrom/func-da-world
