--- a/diagrams/diagrams.cabal
+++ b/diagrams/diagrams.cabal
@@ -1,10 +1,6 @@
-name:                wickstrom-tech
+name:                diagrams
 version:             0.1.0.0
--- synopsis:
--- description:
 homepage:            https://wickstrom.tech
-license:             MIT
-license-file:        LICENSE
 author:              Oskar Wickström
 maintainer:          oskar.wickstrom@gmail.com
 copyright:           Oskar Wickström
@@ -13,7 +9,7 @@ build-type:          Simple
 cabal-version:       >=1.10
 
 library
-  hs-source-dirs:      src/_posts, src/_diagrams
+  hs-source-dirs:      src
   exposed-modules:     TimelineDiagrams
                      , VideoClassifierDiagrams
                      , UndoRedoDiagrams
@@ -25,16 +21,3 @@ library
                      , io-memoize
                      , text
   default-language:    Haskell2010
-
-executable unicode-numbers
-  hs-source-dirs:      src/_tools
-  main-is:             UnicodeNumbers.hs
-  build-depends:       base >= 4.7 && < 5,
-                       pcre-heavy,
-                       pandoc-types < 1.20,
-                       text
-  default-language:    Haskell2010
-
-source-repository head
-  type:     git
-  location: https://github.com/owickstrom/func-da-world
